--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,19 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <app-cars></app-cars> -->
+
+<!-- <div app-cars></div> -->
+<div class="container">
+<div class="row">
+  <div class="col-xs-12">
+    <app-cars></app-cars>
+  </div>
+</div>
+
+</div>
+
+<!-- <div class="app-cars"></div> -->
+
+<!--<div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -16,5 +30,5 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul>-->
 
